tests/test_assets/semantic/valid/strings/arguments.cog
takes_name::(s: u8[6]) -> void {
}

string_argument_ok::() -> void {
    takes_name("hello");
}