tests/test_assets/semantic/invalid/functions/argument_type_mismatch.cog
takes_u8::(value: u8) -> void {
}

test::() -> void {
    takes_u8(true);
}